cody: fix context files overflow (#53726)

--- a/client/cody/webviews/Chat.module.css
+++ b/client/cody/webviews/Chat.module.css
@@ -35,14 +35,14 @@ body[data-vscode-theme-kind='vscode-high-contrast'] .transcript-item:not(.human-
     color: var(--code-foreground);
 }
 
-.transcript-item ul,
-.transcript-item ol {
-    padding-left: 1rem;
+.transcript-item ul:not(.transcript-action *),
+.transcript-item ol:not(.transcript-action *) {
+    padding-left: 2rem;
 }
 
 .transcript-action {
-    background: var(--button-secondary-background);
-    color: var(--button-secondary-foreground);
+    background: var(--vscode-button-secondaryBackground);
+    color: var(--vscode-button-secondaryForeground);
     font-size: var(--vscode-editor-font-size);
 }
 
@@ -109,7 +109,6 @@ body[data-vscode-theme-kind='vscode-high-contrast'] .transcript-item:not(.human-
 
 .suggestion-button {
     border-radius: 1rem;
-    font-size: 0.7rem;
 }
 
 .submit-button-disabled {
